@@ -5,14 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wdcloud</groupId>
     <artifactId>wd-common</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.9</java.version>
-        <wd-dependencies.version>1.0.0</wd-dependencies.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
+
+        <wd-dependencies.version>1.0.0-SNAPSHOT</wd-dependencies.version>
     </properties>
     <modules>
         <module>common-dependencies</module>
@@ -37,12 +42,18 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgs>
                         <!--<arg>-verbose</arg>-->
@@ -66,23 +77,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.1</version>
                 <configuration>
                     <skip>true</skip>
+                    <!--illegal-access=permit以允许第三方库的所有反射访问-->
+                    <!--<argLine>-->
+                        <!--&#45;&#45;illegal-access=permit-->
+                    <!--</argLine>-->
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.5</version>
             </plugin>
         </plugins>
     </build>
-    <!--<repositories>
+    <repositories>
         <repository>
             <id>nexus</id>
             <name>Nexus</name>
-            <url>http://nexus.2dupay.com:8081/nexus/content/groups/public/</url>
+            <url>http://192.168.6.1/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -95,7 +105,7 @@
         <pluginRepository>
             <id>nexus</id>
             <name>Nexus</name>
-            <url>http://nexus.2dupay.com:8081/nexus/content/groups/public/</url>
+            <url>http://192.168.6.1/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -108,11 +118,11 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>http://nexus.2dupay.com:8081/nexus/content/repositories/releases</url>
+            <url>http://192.168.6.1/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://nexus.2dupay.com:8081/nexus/content/repositories/snapshots</url>
+            <url>http://192.168.6.1/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
-    </distributionManagement>-->
+    </distributionManagement>
 </project>
